// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - app invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app configuration: app_id and private_key are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid authentication configuration: type should be "token" or "app"",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - invalid bucketing config - non positive integer 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "bucket_total must be a positive integer",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - invalid bucketing config - out of range 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "bucket_id must be between 1 and 2",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid token configuration: personal_access_token is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index streams - commits 1`] = `
[
  {
    "additions": 23,
    "author": {
      "email": "jane@doe.noreply.github.com",
      "name": "Jane Doe",
      "user": {
        "login": "janedoe",
        "type": "User",
        "url": "https://github.com/janedoe",
      },
    },
    "authoredDate": "2024-07-10T05:00:56Z",
    "branch": "master",
    "changedFilesIfAvailable": 7,
    "committer": {
      "date": "2024-07-09T22:00:56-07:00",
    },
    "deletions": 5,
    "message": "Added commit for testing",
    "oid": "0ac47c4d800fc4581b632157a02a9c9b1a94b462",
    "org": "github",
    "repo": "Hello-World",
    "url": "https://github.com/test/dolos/commit/0ac47c4d800fc4581b632157a02a9c9b1a94b462",
  },
  {
    "additions": 11,
    "author": {
      "email": "jane@doe.noreply.github.com",
      "name": "Jane Doe",
      "user": {
        "login": "janedoe",
        "type": "User",
        "url": "https://github.com/janedoe",
      },
    },
    "authoredDate": "2024-07-10T07:10:56Z",
    "branch": "master",
    "changedFilesIfAvailable": 2,
    "committer": {
      "date": "2024-07-10T22:00:56-07:00",
    },
    "deletions": 3,
    "message": "Another Commit",
    "oid": "0ac47c4d800fc4581b632157a02a9c9b1a941234",
    "org": "github",
    "repo": "Hello-World",
    "url": "https://github.com/test/dolos/commit/0ac47c4d800fc4581b632157a02a9c9b1a941234",
  },
]
`;

exports[`index streams - contributors stats 1`] = `
[
  {
    "org": "github",
    "repo": "Hello-World",
    "total": 135,
    "user": "octocat",
    "weeks": [
      {
        "a": 6898,
        "c": 10,
        "d": 77,
        "w": 1367712000,
      },
    ],
  },
]
`;

exports[`index streams - copilot seats (empty) 1`] = `
[
  {
    "empty": true,
    "org": "github",
  },
]
`;

exports[`index streams - copilot seats with audit logs API 1`] = `
[
  {
    "last_activity_at": "2021-10-14T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": null,
    "startedAt": "2024-07-15T17:43:12.098Z",
    "team": "justice-league",
    "teamJoinedAt": "2024-07-15T17:43:12.098Z",
    "user": "octocat",
  },
  {
    "last_activity_at": "2021-10-13T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": "2021-11-01",
    "startedAt": "2021-09-24T00:00:00.000Z",
    "team": undefined,
    "teamJoinedAt": undefined,
    "user": "octokitten",
  },
  {
    "endedAt": "2024-07-23T13:54:10.205Z",
    "org": "github",
    "team": "justice-league",
    "teamLeftAt": "2024-07-23T13:54:10.205Z",
    "user": "octokatty",
  },
]
`;

exports[`index streams - copilot seats without audit logs API 1`] = `
[
  {
    "last_activity_at": "2021-10-14T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": null,
    "startedAt": "2021-08-04T00:00:00.000Z",
    "team": "justice-league",
    "teamJoinedAt": undefined,
    "user": "octocat",
  },
  {
    "last_activity_at": "2021-10-13T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": "2021-11-01",
    "startedAt": "2021-09-24T00:00:00.000Z",
    "team": undefined,
    "teamJoinedAt": undefined,
    "user": "octokitten",
  },
]
`;

exports[`index streams - copilot usage 1`] = `
[
  {
    "breakdown": [
      {
        "acceptances_count": 250,
        "active_users": 5,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 700,
        "lines_suggested": 900,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 400,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 350,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 200,
        "lines_suggested": 500,
        "suggestions_count": 400,
      },
    ],
    "day": "2023-10-15",
    "org": "github",
    "total_acceptances_count": 800,
    "total_active_chat_users": 4,
    "total_active_users": 10,
    "total_chat_acceptances": 32,
    "total_chat_turns": 200,
    "total_lines_accepted": 1200,
    "total_lines_suggested": 1800,
    "total_suggestions_count": 1000,
  },
  {
    "breakdown": [
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 600,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 6,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 250,
        "lines_suggested": 300,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 150,
        "lines_suggested": 200,
        "suggestions_count": 200,
      },
    ],
    "day": "2023-10-16",
    "org": "github",
    "total_acceptances_count": 600,
    "total_active_chat_users": 8,
    "total_active_users": 12,
    "total_chat_acceptances": 57,
    "total_chat_turns": 426,
    "total_lines_accepted": 700,
    "total_lines_suggested": 1100,
    "total_suggestions_count": 800,
  },
]
`;

exports[`index streams - issues 1`] = `
[
  {
    "assignments": {
      "nodes": [
        {
          "assignee": {
            "html_url": "https://github.com/janedoe",
            "login": "janedoe",
            "name": "Jane Doe",
            "type": "User",
          },
          "createdAt": "2024-08-09T07:56:55Z",
          "type": "AssignedEvent",
        },
        {
          "assignee": {
            "html_url": "https://github.com/janedoe",
            "login": "janedoe",
            "name": "Jane Doe",
            "type": "User",
          },
          "createdAt": "2024-08-09T13:08:33Z",
          "type": "UnassignedEvent",
        },
        {
          "assignee": {
            "html_url": "https://github.com/nehanda",
            "login": "nehanda",
            "name": "Nehanda",
            "type": "User",
          },
          "createdAt": "2024-08-09T13:08:39Z",
          "type": "AssignedEvent",
        },
      ],
    },
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "name": null,
      "type": "User",
    },
    "bodyText": "Description test 1",
    "closedAt": "2024-08-09T13:33:38Z",
    "createdAt": "2024-08-09T07:56:55Z",
    "databaseId": 2457343272,
    "labels": {
      "nodes": [
        {
          "name": "bug",
        },
        {
          "name": "good first issue",
        },
        {
          "name": "help wanted",
        },
      ],
    },
    "org": "github",
    "repo": "Hello-World",
    "state": "CLOSED",
    "title": "This is a test Issue",
    "updatedAt": "2024-08-09T13:33:38Z",
  },
  {
    "assignments": {
      "nodes": [],
    },
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "name": null,
      "type": "User",
    },
    "bodyText": "Description test 2",
    "closedAt": null,
    "createdAt": "2024-08-10T07:56:55Z",
    "databaseId": 2457343272,
    "labels": {
      "nodes": [
        {
          "name": "bug",
        },
      ],
    },
    "org": "github",
    "repo": "Hello-World",
    "state": "OPEN",
    "title": "This is another test Issue",
    "updatedAt": "2024-08-10T13:33:38Z",
  },
]
`;

exports[`index streams - labels 1`] = `
[
  {
    "name": "dependencies",
    "org": "github",
    "repo": "Hello-World",
  },
  {
    "name": "typescript",
    "org": "github",
    "repo": "Hello-World",
  },
  {
    "name": "python",
    "org": "github",
    "repo": "Hello-World",
  },
]
`;

exports[`index streams - organizations 1`] = `
[
  {
    "created_at": "2008-01-14T04:33:35Z",
    "html_url": "https://github.com/octocat",
    "login": "github",
    "name": "github",
    "type": "Organization",
    "updated_at": "2014-03-03T18:58:10Z",
  },
]
`;

exports[`index streams - outside collaborators 1`] = `
[
  {
    "html_url": "https://github.com/nehanda",
    "login": "nehanda",
    "org": "github",
    "type": "User",
  },
  {
    "email": "johndoe@mail.com",
    "html_url": "https://github.com/johndoe",
    "login": "johndoe",
    "name": "John Doe",
    "org": "github",
    "type": "User",
  },
]
`;

exports[`index streams - projects 1`] = `
[
  {
    "body": null,
    "created_at": "2024-08-07T06:55:35Z",
    "id": "PVT_kwDOCoajGc4Al3Uy",
    "name": "Some Project without body",
    "org": "github",
    "updated_at": "2024-08-07T06:55:43Z",
  },
  {
    "body": null,
    "created_at": "2024-08-05T15:08:19Z",
    "id": "Another Project without body",
    "name": "@matiaslcoulougian's untitled project",
    "org": "github",
    "updated_at": "2024-08-05T15:08:19Z",
  },
  {
    "body": "Another one",
    "created_at": "2024-08-05T15:01:36Z",
    "id": "PVT_kwDOCoajGc4Alx1r",
    "name": "Test Project 2",
    "org": "github",
    "updated_at": "2024-08-05T15:01:48Z",
  },
  {
    "body": "This is a project to test this capability",
    "created_at": "2024-08-05T15:00:51Z",
    "id": "PVT_kwDOCoajGc4Alx1f",
    "name": "Test Project 1",
    "org": "github",
    "updated_at": "2024-08-05T15:01:26Z",
  },
  {
    "body": "This is the first project",
    "created_at": "2024-01-01T12:00:00Z",
    "id": "1",
    "name": "Project Alpha",
    "org": "github",
    "updated_at": "2024-01-02T12:00:00Z",
  },
  {
    "body": "This is the second project",
    "created_at": "2024-02-01T12:00:00Z",
    "id": "2",
    "name": "Project Beta",
    "org": "github",
    "updated_at": "2024-02-02T12:00:00Z",
  },
  {
    "body": "This is the third project",
    "created_at": "2024-03-01T12:00:00Z",
    "id": "3",
    "name": "Project Gamma",
    "org": "github",
    "updated_at": "2024-03-02T12:00:00Z",
  },
]
`;

exports[`index streams - pull request comments 1`] = `
[
  {
    "body": "This is a test comment.",
    "created_at": "2024-07-18T17:04:03Z",
    "id": 1683209890,
    "pull_request_url": "https://api.github.com/repos/test/dolos/pulls/1234",
    "repository": "github/Hello-World",
    "updated_at": "2024-07-18T17:04:04Z",
    "user": {
      "html_url": "https://github.com/jdoe",
      "login": "jdoe",
      "type": "User",
    },
  },
  {
    "body": "Another comment to test :)",
    "created_at": "2024-07-18T17:04:03Z",
    "id": 1683209891,
    "pull_request_url": "https://api.github.com/repos/test/dolos/pulls/1234",
    "repository": "github/Hello-World",
    "updated_at": "2024-07-18T17:04:04Z",
    "user": {
      "html_url": "https://github.com/jdoe",
      "login": "jdoe",
      "type": "User",
    },
  },
]
`;

exports[`index streams - pull requests 1`] = `
[
  {
    "additions": 1077,
    "author": {
      "html_url": "https://github.com/dolos",
      "login": "dolos",
      "name": "Dolos",
      "type": "User",
    },
    "baseRefName": "main",
    "baseRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "body": "**Related issues**
https://github.com/faros-ai/tickets/issues/120

**Describe the proposed solution**
Optional \`employee\` param changes DORA app behavior to return metrics rolled-up by owner.

**Describe alternatives you've considered**
A clear and concise description of any alternative solutions or features you've considered.

**Additional context**
Add any other context about the changes here.
",
    "changedFiles": 21,
    "comments": {
      "totalCount": 3,
    },
    "commits": {
      "totalCount": 13,
    },
    "createdAt": "2021-02-12T05:35:19Z",
    "deletions": 763,
    "files": [
      {
        "additions": 15,
        "deletions": 0,
        "path": "dolos/test/file.ts",
      },
    ],
    "headRefName": "dora-employee-param",
    "headRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "isDraft": false,
    "labels": [
      {
        "name": "dependencies",
      },
      {
        "name": "typescript",
      },
    ],
    "mergeCommit": {
      "oid": "b4c35c299ad22fe858569482a7696597ca038651",
    },
    "mergedAt": "2021-02-16T17:15:27Z",
    "number": 48,
    "org": "github",
    "repo": "Hello-World",
    "reviewEvents": {
      "nodes": [],
    },
    "reviewRequests": [
      {
        "requestedReviewer": {
          "html_url": "https://github.com/nehanda",
          "login": "nehanda",
          "name": null,
          "type": "User",
        },
      },
    ],
    "reviews": [
      {
        "author": {
          "html_url": "https://github.com/nehanda",
          "login": "nehanda",
          "name": null,
          "type": "User",
        },
        "comments": {
          "totalCount": 1,
        },
        "databaseId": 2192199611,
        "state": "COMMENTED",
        "submittedAt": "2021-02-04T21:53:09Z",
        "url": "https://github.com/test/dolos/pull/1234#pullrequestreview-2192199611",
      },
      {
        "author": {
          "html_url": "https://github.com/nehanda",
          "login": "nehanda",
          "name": null,
          "type": "User",
        },
        "comments": {
          "totalCount": 0,
        },
        "databaseId": 2192199612,
        "state": "APPROVED",
        "submittedAt": "2021-03-04T21:53:09Z",
        "url": "https://github.com/test/dolos/pull/1234#pullrequestreview-2192199612",
      },
    ],
    "state": "MERGED",
    "title": "DORA apps take optional employee uid param",
    "updatedAt": "2021-02-16T17:15:29Z",
    "url": "https://github.com/faros-ai/faros-apps/pull/48",
  },
  {
    "additions": 0,
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "name": "nehanda",
      "type": "User",
    },
    "baseRefName": "main",
    "baseRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "body": "**Related issues**
Ensures we only expose the apps that can run on the latest Faros API 

**Describe the proposed solution**
Moving all apps that are not compatible with our new schema and/or do not have feed and model support yet. As we add more feeds re-add them after full testing.

**Describe alternatives you've considered**
N/A

",
    "changedFiles": 140,
    "comments": {
      "totalCount": 1,
    },
    "commits": {
      "totalCount": 2,
    },
    "createdAt": "2021-02-04T23:54:56Z",
    "deletions": 4787,
    "files": [
      {
        "additions": 14,
        "deletions": 0,
        "path": "dolos/test/file.ts",
      },
      {
        "additions": 33,
        "deletions": 2,
        "path": "nehanda/test/file2.ts",
      },
      {
        "additions": 1,
        "deletions": 10,
        "path": "nehanda/test/file3.ts",
      },
    ],
    "headRefName": "nehanda/cleanup-apps",
    "headRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "isDraft": false,
    "labels": [],
    "mergeCommit": null,
    "mergedAt": null,
    "number": 47,
    "org": "github",
    "repo": "Hello-World",
    "reviewEvents": {
      "nodes": [],
    },
    "reviewRequests": [],
    "reviews": [],
    "state": "CLOSED",
    "title": "Move apps with no feed support temporarily to internal",
    "updatedAt": "2021-02-11T18:10:08Z",
    "url": "https://github.com/faros-ai/faros-apps/pull/47",
  },
  {
    "additions": 109,
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "name": null,
      "type": "User",
    },
    "baseRefName": "main",
    "baseRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "body": "Handle cases and add tests for when:
1. Deployments have no associated builds
2. Builds have no associated commits",
    "changedFiles": 2,
    "comments": {
      "totalCount": 0,
    },
    "commits": {
      "totalCount": 9,
    },
    "createdAt": "2021-02-04T15:49:42Z",
    "deletions": 23,
    "files": [
      {
        "additions": 14,
        "deletions": 0,
        "path": "dolos/test/file.ts",
      },
      {
        "additions": 10,
        "deletions": 2,
        "path": "nehanda/test/file2.ts",
      },
    ],
    "headRefName": "fix-edge-cases",
    "headRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "dora",
      },
    },
    "isDraft": false,
    "labels": [
      {
        "name": "dependencies",
      },
    ],
    "mergeCommit": {
      "oid": "8fe76c0e99f7e00533181b3749735fcf9fdea206",
    },
    "mergedAt": "2021-02-04T21:53:00Z",
    "number": 46,
    "org": "github",
    "repo": "Hello-World",
    "reviewEvents": {
      "nodes": [],
    },
    "reviewRequests": [
      {
        "requestedReviewer": {
          "html_url": "https://github.com/user1",
          "login": "user1",
          "name": null,
          "type": "User",
        },
      },
      {
        "requestedReviewer": {
          "members": {
            "nodes": [
              {
                "html_url": "https://github.com/user2",
                "login": "user2",
                "name": null,
                "type": "User",
              },
              {
                "html_url": "https://github.com/user3",
                "login": "user3",
                "name": null,
                "type": "User",
              },
            ],
          },
          "type": "Team",
        },
      },
    ],
    "reviews": [
      {
        "author": {
          "html_url": "https://github.com/nehanda",
          "login": "nehanda",
          "name": null,
          "type": "User",
        },
        "comments": {
          "totalCount": 0,
        },
        "databaseId": 2192199689,
        "state": "APPROVED",
        "submittedAt": "2021-02-04T21:53:09Z",
        "url": "https://github.com/test/dolos/pull/1234#pullrequestreview-2192199689",
      },
    ],
    "state": "MERGED",
    "title": "Fix edge cases for deploy cycle breakdown",
    "updatedAt": "2021-02-04T21:53:09Z",
    "url": "https://github.com/faros-ai/faros-apps/pull/46",
  },
]
`;

exports[`index streams - releases 1`] = `
[
  {
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "type": "User",
    },
    "body": "## What's Changed\\r\\n* Lots of new stuff!",
    "created_at": "2024-08-02T17:48:35Z",
    "draft": false,
    "html_url": "https://api.github.com/repos/test/dolos/releases/168491573",
    "id": 168491573,
    "name": "v0.0.1",
    "published_at": "2024-08-02T18:19:55Z",
    "repository": "github/Hello-World",
    "tag_name": "v0.0.1",
  },
  {
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "type": "User",
    },
    "body": "## What's Changed\\r\\n* Lots of stuff! Full Changelog**: https://github.com/test/dolos/compare/v0.0.1...v0.0.2",
    "created_at": "2024-08-01T15:31:36Z",
    "draft": false,
    "html_url": "https://api.github.com/repos/test/dolos/releases/168274419",
    "id": 168274419,
    "name": "v0.0.2",
    "published_at": "2024-08-01T15:39:35Z",
    "repository": "github/Hello-World",
    "tag_name": "v0.0.2",
  },
  {
    "author": {
      "html_url": "https://github.com/jdoe",
      "login": "jdoe",
      "type": "User",
    },
    "body": "## What's Changed\\r\\n* Lots of stuff! Full Changelog**: https://github.com/test/dolos/compare/v0.0.2...v0.0.3",
    "created_at": "2024-07-31T22:07:35Z",
    "draft": false,
    "html_url": "https://api.github.com/repos/test/dolos/releases/168130489",
    "id": 168130489,
    "name": "v0.0.3",
    "published_at": "2024-07-31T22:08:45Z",
    "repository": "github/Hello-World",
    "tag_name": "v0.0.3",
  },
]
`;

exports[`index streams - repositories 1`] = `
[
  {
    "created_at": "2011-01-26T19:01:12Z",
    "default_branch": "master",
    "description": "This your first repo!",
    "full_name": "octocat/Hello-World",
    "html_url": "https://github.com/octocat/Hello-World",
    "language": null,
    "name": "Hello-World",
    "org": "github",
    "private": false,
    "size": 108,
    "topics": [
      "octocat",
      "atom",
      "electron",
      "api",
    ],
    "updated_at": "2011-01-26T19:14:43Z",
  },
]
`;

exports[`index streams - repositories with bucketing 1`] = `
[
  {
    "created_at": "2023-06-01T12:00:00Z",
    "default_branch": "main",
    "description": "This is a new repo!",
    "full_name": "octocat/New-Repo",
    "html_url": "https://github.com/octocat/New-Repo",
    "language": null,
    "name": "New-Repo",
    "org": "github",
    "private": false,
    "size": 256,
    "topics": [
      "github",
      "api",
      "example",
    ],
    "updated_at": "2023-07-01T12:00:00Z",
  },
]
`;

exports[`index streams - saml sso users 1`] = `
[
  {
    "org": "github",
    "samlIdentity": {
      "nameId": "mt@faros.ai",
    },
    "user": {
      "html_url": "https://github.com/tovbinm",
      "login": "tovbinm",
      "type": "User",
    },
  },
  {
    "org": "github",
    "samlIdentity": {
      "nameId": "jennie@faros.ai",
    },
    "user": {
      "html_url": "https://github.com/jeniii",
      "login": "jeniii",
      "type": "User",
    },
  },
]
`;

exports[`index streams - tags 1`] = `
[
  {
    "commit": {
      "committedDate": "2024-03-28T19:07:25Z",
      "sha": "a91f0eb6e2c0dd050a72bf2e2b73878a9342403c",
      "type": "Commit",
    },
    "name": "v0.0.1",
    "repository": "github/Hello-World",
  },
  {
    "commit": {
      "committedDate": "2024-04-03T14:30:21Z",
      "sha": "97b456be6dab02610a7f7683be82a5c7191372c0",
      "type": "Commit",
    },
    "name": "v0.0.2",
    "repository": "github/Hello-World",
  },
  {
    "commit": {
      "committedDate": "2024-04-03T18:52:19Z",
      "sha": "8c73521620f8cd70a07c7a475dfe3dd09f7690cf",
      "type": "Commit",
    },
    "name": "v0.0.3",
    "repository": "github/Hello-World",
  },
]
`;

exports[`index streams - team memberships 1`] = `
[
  {
    "org": "github",
    "team": "justice-league",
    "user": {
      "html_url": "https://github.com/octocat",
      "login": "octocat",
      "type": "User",
    },
  },
]
`;

exports[`index streams - teams 1`] = `
[
  {
    "description": "A great team.",
    "name": "Justice League",
    "org": "github",
    "parentSlug": null,
    "slug": "justice-league",
  },
]
`;

exports[`index streams - users 1`] = `
[
  {
    "email": "",
    "html_url": "https://github.com/octocat",
    "login": "octocat",
    "name": "Octocat",
    "org": "github",
    "type": "User",
  },
  {
    "email": "",
    "html_url": "https://github.com/octokitten",
    "login": "octokitten",
    "name": "Octokitten",
    "org": "github",
    "type": "User",
  },
]
`;
